[gd_scene load_steps=6 format=2]

[ext_resource path="res://CovidVirus.gd" type="Script" id=1]
[ext_resource path="res://COVID.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.3802
height = 3.90218

[sub_resource type="CircleShape2D" id=2]
radius = 32.699

[sub_resource type="Animation" id=3]
resource_name = "Flash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 5, 5, 5, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CovidVirus" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 2 )

[node name="ShrinkTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 3 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="tween_all_completed" from="ShrinkTween" to="." method="_on_ShrinkTween_tween_all_completed"]
